<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.univalle.miniproyecto1.viewmodel.InventoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/inv_black_80"
        tools:context=".view.fragment.AddItemFragment">

        <include
            android:id="@+id/contentToolbar2"
            layout="@layout/toolbar_detail_item"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvInventory"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:backgroundTint="@color/inv_white"
            app:cardCornerRadius="15dp"
            android:elevation="8dp"

            android:layout_marginTop="55dp"      android:layout_marginStart="16dp"    android:layout_marginEnd="16dp"      app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentToolbar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnDelete">>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio_unidad"
                    android:padding="5dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvItem"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:padding="5dp"
                    android:text="@string/_15_000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/inv_orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvItem" />

                <TextView
                    android:id="@+id/tvQuantityAvailible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad_disponible"
                    android:padding="5dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvName"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/tvPrice"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/txtTituloTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:padding="5dp"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@+id/tvQuantityAvailible"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/txtTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100_000"
                    android:textColor="@color/inv_orange"
                    android:padding="5dp"
                    android:textSize="16sp"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/tvQuantity"
                    app:layout_constraintEnd_toEndOf="parent"/>




            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/bg_redondo"
            android:text="@string/eliminar"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textColor="@color/inv_white"

            app:layout_constraintTop_toBottomOf="@+id/cvInventory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbEdit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="button add"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/inv_orange"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>