<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/inv_black_80"
        tools:context=".view.fragment.AddItemFragment"
        android:fitsSystemWindows="true"
        >

        <include
            android:id="@+id/contentToolbar2"
            layout="@layout/toolbar_create_item"/>


        <EditText
            android:id="@+id/etCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:layout_marginTop="52dp"

            android:layout_gravity="center"
            android:textColor="@color/inv_white"

            android:textColorHint="@color/inv_white"

            android:hint="@string/c_digo_producto"
            android:background="@drawable/bg_redondo2"
            android:padding="18dp"
            android:inputType="text"
            android:maxLength="10"

            app:layout_constraintTop_toBottomOf="@id/contentToolbar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:layout_marginTop="20dp"

            android:layout_gravity="center"
            android:textColor="@color/inv_white"

            android:textColorHint="@color/inv_white"

            android:hint="@string/nombre_art_culo"
            android:background="@drawable/bg_redondo2"
            android:padding="18dp"
            android:inputType="text"
            android:maxLength="10"

            app:layout_constraintTop_toBottomOf="@id/etCodigo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <EditText
            android:id="@+id/etPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:layout_marginTop="20dp"

            android:layout_gravity="center"

            android:textColorHint="@color/inv_white"
            android:textColor="@color/inv_white"

            android:hint="@string/precio"
            android:background="@drawable/bg_redondo2"
            android:padding="18dp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/etName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:layout_marginTop="20dp"

            android:layout_gravity="center"

            android:textColorHint="@color/inv_white"
            android:textColor="@color/inv_white"

            android:hint="@string/cantidad"
            android:background="@drawable/bg_redondo2"
            android:padding="18dp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/etPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btnSaveInventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            android:text="@string/guardar"
            android:enabled="false"
            android:background="@drawable/bg_redondo"
            app:layout_constraintTop_toBottomOf="@+id/etQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>